quoting-CypressTK1/force-app/main/default/objects/ProjectMilestone__c/fields/ActivityName__c.field-meta.xml
<CustomField>
    <fullName>ActivityName__c</fullName>
    <formula>IF(NOT(ISBLANK(ProjectPhase__c)),ProjectPhase__r.Name,
IF( NOT(ISBLANK(QuoteSection__c)),QuoteSection__r.Name,
IF( NOT(ISBLANK(QuotePeriodGroup__c)),QuotePeriodGroup__r.Name,
IF( NOT(ISBLANK(QuotePeriod__c)),QuotePeriod__r.Name,&quot;N/A&quot;))))</formula>
    <label>Activity Name</label>
    <type>Text</type>
</CustomField>