quoting-CypressTK1/force-app/main/default/objects/ProjectMilestone__c/fields/Alignment__c.field-meta.xml
<CustomField>
    <fullName>Alignment__c</fullName>
    <label>Alignment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Start of Project</fullName>
            </value>
            <value>
                <fullName>End of Project</fullName>
            </value>
            <value>
                <fullName>Start of Phase</fullName>
            </value>
            <value>
                <fullName>End of Phase</fullName>
            </value>
            <value>
                <fullName>Start of Section</fullName>
            </value>
            <value>
                <fullName>End of Section</fullName>
            </value>
            <value>
                <fullName>Start of Period Group</fullName>
            </value>
            <value>
                <fullName>End of Period Group</fullName>
            </value>
            <value>
                <fullName>Start of Period</fullName>
            </value>
            <value>
                <fullName>End of Period</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>