quoting-CypressTK1/force-app/main/default/objects/ProjectMilestone__c/fields/AlignmentDate__c.field-meta.xml
<CustomField>
    <fullName>AlignmentDate__c</fullName>
    <label>Alignment Date</label>
    <type>Date</type>
</CustomField>