quoting-CypressTK1/force-app/main/default/objects/ProjectMilestone__c/fields/AlignToActivityOrMilestone__c.field-meta.xml
<CustomField>
    <fullName>AlignToActivityOrMilestone__c</fullName>
    <formula>IF(ISPICKVAL(Type__c,&apos;Occurs on a Date&apos;),&quot;N/A&quot;,
IF(ISPICKVAL(Type__c,&apos;Aligned to Project Activity&apos;), MilestoneId__r.Name,
IF(ISPICKVAL(Type__c,&apos;Aligned to another Milestone&apos;),MilestoneId__r.Name,&quot;N/A&quot;)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Align to Activity or Milestone</label>
    <type>Text</type>
</CustomField>