quoting-CypressTK1/force-app/main/default/objects/ProjectMilestone__c/fields/AlignToDate__c.field-meta.xml
<CustomField>
    <fullName>AlignToDate__c</fullName>
    <formula>CASE(Type__c, 
&apos;Occurs on a Date&apos;,  AlignmentDate__c,
null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Align to Date</label>
    <type>Date</type>
</CustomField>