quoting-CypressTK1/force-app/main/default/objects/ProjectMilestone__c/fields/EstimatedOccurrenceDate__c.field-meta.xml
<CustomField>
    <fullName>EstimatedOccurrenceDate__c</fullName>
    <formula>IF(NOT(ISBLANK(Offset__c)),
CASE(OffsetUnit__c ,
&quot;Days&quot;,  ActivityDate__c +  Offset__c ,
&quot;Weeks&quot;, ActivityDate__c + (Offset__c * 7),
&quot;Months&quot;, ADDMONTHS(ActivityDate__c, Offset__c) ,
&quot;Quarters&quot;, ADDMONTHS(ActivityDate__c, (Offset__c * 3)),
&quot;Years&quot;, ADDMONTHS(ActivityDate__c, (Offset__c * 12)),
ActivityDate__c),
ActivityDate__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Estimated Occurrence Date</label>
    <type>Date</type>
</CustomField>