quoting-CypressTK1/force-app/main/default/objects/ProjectMilestone__c/fields/MilestoneId__c.field-meta.xml
<CustomField>
    <fullName>MilestoneId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Milestone</label>
    <referenceTo>ProjectMilestone__c</referenceTo>
    <relationshipLabel>Project Milestones</relationshipLabel>
    <relationshipName>MilestoneIds</relationshipName>
    <type>Lookup</type>
</CustomField>