quoting-CypressTK1/force-app/main/default/objects/ProjectMilestone__c/fields/OffsetUnit__c.field-meta.xml
<CustomField>
    <fullName>OffsetUnit__c</fullName>
    <label>Offset Unit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>TimePeriods</valueSetName>
    </valueSet>
</CustomField>