quoting-CypressTK1/force-app/main/default/objects/ProjectMilestone__c/fields/ProjectPhase__c.field-meta.xml
<CustomField>
    <fullName>ProjectPhase__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project Phase</label>
    <referenceTo>ProjectPhase__c</referenceTo>
    <relationshipLabel>Project Milestones</relationshipLabel>
    <relationshipName>ProjectMilestones</relationshipName>
    <type>Lookup</type>
</CustomField>