quoting-CypressTK1/force-app/main/default/objects/ProjectMilestone__c/fields/QuotePeriod__c.field-meta.xml
<CustomField>
    <fullName>QuotePeriod__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quote Period</label>
    <referenceTo>QuotePeriod__c</referenceTo>
    <relationshipLabel>Project Milestones</relationshipLabel>
    <relationshipName>ProjectMilestones</relationshipName>
    <type>Lookup</type>
</CustomField>