quoting-CypressTK1/force-app/main/default/objects/ProjectMilestone__c/fields/QuotePeriodGroup__c.field-meta.xml
<CustomField>
    <fullName>QuotePeriodGroup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quote Period Group</label>
    <referenceTo>QuotePeriodGroup__c</referenceTo>
    <relationshipLabel>Project Milestones</relationshipLabel>
    <relationshipName>ProjectMilestones</relationshipName>
    <type>Lookup</type>
</CustomField>