quoting-CypressTK1/force-app/main/default/objects/ProjectMilestone__c/fields/QuoteSection__c.field-meta.xml
<CustomField>
    <fullName>QuoteSection__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quote Section</label>
    <referenceTo>QuoteSection__c</referenceTo>
    <relationshipLabel>Project Milestones</relationshipLabel>
    <relationshipName>ProjectMilestones</relationshipName>
    <type>Lookup</type>
</CustomField>